# drift_correction

./: README.md  pyproject.toml
.github/workflows/: pytest.yml  pytest_linux.yml  pytest_windows.yml
drift_correction/: __init__.py  drif_correction.py  drift_correction.py  gui.py  main.py  napari.yaml  utils.py
examples/: example_analytical.py  utils.py
tests/: test_analytical.py
