[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drift_correction"
dynamic = ["version"]
description = "An application for re-aligning frames from an image stack."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "GPL v3" }
authors = [{ name = "Patrick Quéméré", email = "patrick.quemere@cea.fr" }]

classifiers = [
    "Framework :: napari",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = [
    "numpy",
    "matplotlib",
    "tifffile",
    "dm3_lib @ git+https://github.com/piraynal/pyDM3reader.git",
    "diplib",
]

[project.optional-dependencies]
napari = ["napari"]
dev = ["pytest"]


[tool.setuptools.packages.find]
where = ["."]
include = ["drift_correction*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "drift_correction.VERSION" }

[tool.setuptools.package-data]
"drift_correction" = ["napari.yaml"]

[project.scripts]
drift-correction = "drift_correction.gui:launch"

[project.entry-points."napari.manifest"]
"drift-correction" = "drift_correction:napari.yaml"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/CEA-MetroCarac/drift_correction.git"
Issues = "https://github.com/CEA-MetroCarac/drift_correction/issues"